apps/podinfo/middleware-basicauth.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: basic-auth
  namespace: podinfo
spec:
  basicAuth:
    secret: basic-auth
